@@ -5,6 +5,7 @@ Changes in 4.0beta2:
 - Pause becomes suspend
 - Revamp torrent creation code
 - Avoid unnecessary memcpy when generating hash
+- Add UDP tracker scraping
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
